--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,9 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
 
 /*
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	SHAK Nairobi website
+	Synergy Apps Inc.
 */
 
 html, body, div, span, applet, object,
@@ -70,6 +69,26 @@ input, select, textarea {
 	-webkit-appearance: none;
 	-ms-appearance: none;
 	appearance: none;
+}
+/* intro */
+.intro {
+	background-image: url("/images/2.jpg");
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+/* text */
+.bold {
+	font-weight: 900;
+}
+.dark-text {
+	color: black;
+}
+.bright-text {
+	color: whitesmoke;
+}
+.yellow-text {
+	color: yellow;
 }
 
 /* Basic */
