added test divs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3778,6 +3778,29 @@ input, select, textarea {
 
 		}
 
+
+		/* test */
+		.top {
+			width: 100%;
+			height: 50px;
+			background-color: red;
+		}
+		.middle {
+			width: 100%;
+			height: 50px;
+			background-color: green;
+		}
+		.bottom {
+			width: 100%;
+			height: 50px;
+			background-color: blue;
+		}
+		.test {
+			display: flex;
+			flex-wrap: nowrap;
+		}
+
+
 /* Main */
 
 	#main {
