--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,7 +31,9 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-
+.shak-logo {
+	height: 5rem;
+}
 ol, ul {
 	list-style: none;
 }
@@ -3259,8 +3261,8 @@ table.alt tbody tr td {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #212931;
-	background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+	background-color: white;
+	background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/2.jpg");
 	background-size: auto,								auto,														100% auto;
 	background-position: center,								center,														top center;
 	background-repeat: repeat,								no-repeat,													no-repeat;
@@ -4437,11 +4439,9 @@ z-index: 2;
 	cursor: default;
 	font-family: "Source Sans Pro", Helvetica, sans-serif;
 	font-size: 0.8rem;
-	font-weight: 900;
 	letter-spacing: 0.075em;
 	line-height: 1.5;
 	text-align: center;
-	text-transform: uppercase;
 	margin: 4rem auto 8rem auto;
 	width: calc(100% - 4rem);
 	max-width: 72rem;
@@ -4501,6 +4501,7 @@ z-index: 2;
 	line-height: 1;
 	margin-left: 1rem;
 	padding-left: 1rem;
+	font-family: 'Courier New', Courier, monospace;
 }
 
 #copyright ul li:first-child {
