--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2307,7 +2307,10 @@ button,
 	display: flex;
 	justify-content: center;
 }
-
+.get-involved-btn {
+	display: flex;
+	justify-content: center;
+}
 input[type="submit"]:hover,
 input[type="reset"]:hover,
 input[type="button"]:hover,
@@ -3195,7 +3198,8 @@ table tfoot {
 }
 
 table.alt tbody tr td {
-	border-color: #eeeeee;
+	border-color: seashell;
+	background-color: snow;
 }
 
 /* Pagination */
@@ -3333,12 +3337,11 @@ table.alt tbody tr td {
 	width: 100%;
 	height: 100%;
 	background-color: white;
-	background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/.jpg");
-	background-size: auto,								auto,														100% auto;
-	background-position: center,								center,														top center;
-	background-repeat: repeat,								no-repeat,													no-repeat;
-	background-attachment: scroll,								scroll,														scroll;
-	z-index: -1;
+	background-image: url("../../images/2.jpg"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/.jpg");
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
 
 	#wrapper > .bg.fixed {
