--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -271,7 +271,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 900;
 	line-height: 1.5;
 	letter-spacing: 0.075em;
-	text-transform: uppercase;
+	text-transform: none;
 	margin: 0 0 1rem 0;
 }
 
@@ -285,6 +285,7 @@ h1 {
 	font-size: 4rem;
 	line-height: 1.1;
 	margin: 0 0 2rem 0;
+	text-transform: uppercase;
 }
 
 h2 {
@@ -1587,6 +1588,10 @@ hr {
 		padding: 0 0 0 1.5rem;
 	}
 
+	.leaders {
+		padding-left: 20px;
+	}
+
 	.row.gtr-uniform {
 		margin-top: -1.5rem;
 	}
@@ -2738,7 +2743,6 @@ input[type="radio"]:focus + label:before {
 .image.main img {
 	width: 100%;
 }
-
 @media screen and (max-width: 736px) {
 
 	.image.fit {
@@ -3327,8 +3331,8 @@ table.alt tbody tr td {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: white;
-	background-image: url("../../images/2.jpg"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/.jpg");
+	background-color: whitesmoke;
+	linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/.jpg");
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -3748,7 +3752,6 @@ z-index: 2;
 
 #nav a {
 	color: white;
-	border-bottom-color: yellow;
 }
 
 #nav a:hover {
@@ -4054,7 +4057,7 @@ z-index: 2;
 	display: -webkit-flex;
 	display: -ms-flex;
 	display: flex;
-	background-color: seashell;
+	background-color: rgba(3, 46, 82, 0.541);
 	color: black;
 	cursor: default;
 	position: relative;
